[Fix]That doesn't worked xD The inner scrollbar dissappeared but the user can no longer scroll on the inner table xD

--- a/public/css/formate.css
+++ b/public/css/formate.css
@@ -334,7 +334,8 @@ h1
 #content {
 	position:absolute;
 	left:190px;
-	overflow:hidden;
+	scrollbars:none;
+	overflow:auto;
 	width:80%;
 	height:100%;
 }
